--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 </head>
 
 <body>
-    <section class="sectionA">
-        <div>
-            <h1 class="text-align"><b>Let's Help Those Who Are</b></h1>
-            <h1 class="text-align">More In Need</h1>
-            <p class="small">It is important to understand what causes flooding and <br> what the effects can
-                be<br>Flood
-                prevention processes help to <br> reduce damage and protect people in the event of a flood.</p>
-        </div><br>
-        <div class="edit">
-            <a class="dv" target="_blank" href="">Donate Now</a>
-        </div>
+    <section id="sectionA">
+
+        <h1 class="text-align"><b>Let's Help Those Who Are</b></h1>
+        <h1 class="text-align">More In Need</h1>
+        <p class="small">It is important to understand what causes flooding and <br> what the effects can
+            be<br>Flood
+            prevention processes help to <br> reduce damage and protect people in the event of a flood.</p>
+        <br>
+        <p class="edit">
+            <a class="button" target="_blank" href="">Donate Now</a>
+        </p>
     </section>
-    <section class="sectionB">
+    <section id="sectionB">
         <div>
             <h1 class="text2">Donate Today</h1>
             <p class="small2">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
@@ -49,14 +49,12 @@
         <div class="new">
             <p class="small">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
                 deterruisset. No duo populo animal noluisse, enim</p>
-            <p><span>Other Amout</span></p>
-
-            <div class=" line"> <br><a class="dv" href="">Donate now</a>
-            </div>
-
+            <p><span>Other Amout (taka)</span></p>
+            <a class="button" href="">Donate now</a>
+        </div>
 
     </section>
-    <section class="sectionC">
+    <section id="sectionC">
         <div>
             <h1 class="text2">Our donate plan</h1>
             <p class="small2">As a non-profit organization, youre primarily relying on volunteers and donations to fund
@@ -66,21 +64,21 @@
             </p>
         </div>
         <div class="plan">
-            <div><img src="food.png"></img>
+            <div id="box1"><img src="food.png"></img>
                 <h1>Food for a family</h1>
                 <p>Amet minim mollit non deserunt
                     ullamco est sit aliqua dolor do amet
                     sint. Velit officia consequat duis enim
                     velit mollit.</p>
             </div>
-            <div><img src="shelter.png">
+            <div id="box2"><img src="shelter.png">
                 <h1>Shelter for a family</h1>
                 <p>Amet minim mollit non deserunt
                     ullamco est sit aliqua dolor do amet
                     sint. Velit officia consequat duis enim
                     velit mollit.</p>
             </div>
-            <div><img src="Frame-1.png"></img>
+            <div id="box3"><img src="Frame-1.png"></img>
                 <h1>Education for a child</h1>
                 <p>Amet minim mollit non deserunt
                     ullamco est sit aliqua dolor do amet
@@ -88,9 +86,34 @@
                     velit mollit.</p>
             </div>
         </div>
-
-
-
+    </section>
+    <section id="sectionD">
+        <div class="half-width">
+            <h1 id="lives">Donate And <br><span id="save">Save Lives</span></h1>
+            <p class="recent">The recent flood has caused havoc in Sylhet, Sunamganj and others parts of the
+                country,
+                leaving people
+                with no food and water. Since the beginning of this crisis, JAAGO Foundation, with the help of our
+                generous supporters and volunteers, have worked relentlessly and provided people with food, medicine
+                and
+                other necessities.
+            </p>
+            <a class="button" href="">Donate now</a>
+        </div>
+        <div class="half-width">link <img src="nodi2.jpg" alt=""></div>
+    </section>
+    <section id="sectionE">
+        <div class="for-this">link <img src="nodi3.jpg" alt=""></div>
+        <div class="for-this">
+            <h1 id="lives">We Are here <br><Span id="save">To Survive</Span></h1>
+            <p class="recent">With the flood waters receding, there was a rise in waterborne diseases in the country.
+                People suffered
+                from diseases like diarrhoea, dysentery, fever, skin infections and other waterborne diseases. Ensuring
+                the availability of drinking water was our top priority. So far, we have helped thousands of families.
+                In addition to providing clean drinking water and food, JAAGO has begun working on the post-flood
+                situation.</p>
+            <a class="button" href="">Donate now</a>
+        </div>
 
     </section>
 </body>
