--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
 <body>
     <section id="sectionA">
-
-        <h1 class="text-align"><b>Let's Help Those Who Are</b></h1>
-        <h1 class="text-align">More In Need</h1>
-        <p class="small">It is important to understand what causes flooding and <br> what the effects can
-            be<br>Flood
-            prevention processes help to <br> reduce damage and protect people in the event of a flood.</p>
-        <br>
-        <p class="edit">
-            <a class="button" target="_blank" href="">Donate Now</a>
-        </p>
+        <div class="container">
+            <img src="donation7.jpg" alt="Snow" style="width:100%;">
+            <div class="centered">
+                <h1>Let's Help Those Who Are <br>More In Need</h1>
+                <p id="lorem">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset. No duo populo animal noluisse, enim
+                </p>
+                <a class="button" href="">Donate now</a>
+            </div>
+        </div>
     </section>
     <section id="sectionB">
         <div>
@@ -47,9 +47,8 @@
 
         </div>
         <div class="new">
-            <p class="small">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim</p>
             <p><span>Other Amout (taka)</span></p>
+            <hr> <br>
             <a class="button" href="">Donate now</a>
         </div>
 
@@ -114,7 +113,19 @@
                 situation.</p>
             <a class="button" href="">Donate now</a>
         </div>
-
+    </section>
+    <section class="sectionE">
+        <div>
+            <h1 id="get">Get My Update</h1>
+            <p class="small2">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="email">
+            <label class="email-input">
+                <input id="text-input" type="text" name="" placeholder="E-mail" />
+                <button id="subs">Subscribe</button>
+            </label>
+        </div>
     </section>
 </body>
 
