--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Edu+QLD+Beginner:wght@500&family=Ibarra+Real+Nova:wght@600&family=Oswald:wght@600&display=swap"
         rel="stylesheet">
@@ -99,10 +102,10 @@
             </p>
             <a class="button" href="">Donate now</a>
         </div>
-        <div class="half-width">link <img src="nodi2.jpg" alt=""></div>
+        <div class="half-width"><img src="nodi2.jpg" alt=""></div>
     </section>
     <section id="sectionE">
-        <div class="for-this">link <img src="nodi3.jpg" alt=""></div>
+        <div class="for-this"><img src="nodi3.jpg" alt=""></div>
         <div class="for-this">
             <h1 id="lives">We Are here <br><Span id="save">To Survive</Span></h1>
             <p class="recent">With the flood waters receding, there was a rise in waterborne diseases in the country.
@@ -127,6 +130,11 @@
             </label>
         </div>
     </section>
+
 </body>
+<footer>
+    <h1 id="humble">Be Humble</h1>
+    <p id="do">I'm gonna do it</p>
+</footer>
 
 </html>
